--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,33 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "zigcc-build"
-version = "0.2.0"
+version = "0.2.1"
 description = "A PEP 517 build backend using zig cc"
-authors = [{name = "Julien"}]
+authors = [{name = "Julien Rialland", email = "julien.rialland@gmail.com"}]
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.12"
+license = {text = "MIT"}
+keywords = ["build", "pep517", "pep660", "zig", "c", "c++", "compiler", "extension"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Topic :: Software Development :: Build Tools",
+    "Topic :: Software Development :: Compilers",
+]
 dependencies = [
-    "tomli; python_version < '3.11'",
     "ziglang",
     "packaging",
 ]
+
+[project.urls]
+Homepage = "https://github.com/jrialland/zigcc-build"
+Repository = "https://github.com/jrialland/zigcc-build"
+Issues = "https://github.com/jrialland/zigcc-build/issues"
 
 [project.entry-points."distutils.commands"]
 # Optional: if you wanted to integrate with setuptools, but we are doing a standalone backend.
