--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,20 +24,31 @@ jobs:
         # Extract version from package
         PACKAGE_VERSION=$(python -c "import sys; sys.path.insert(0, 'src'); import zigcc_build; print(zigcc_build.__version__)")
         
+        # Extract version from pyproject.toml
+        PYPROJECT_VERSION=$(python -c "import tomllib; print(tomllib.load(open('pyproject.toml', 'rb'))['project']['version'])")
+        
         # Extract version from release tag (remove 'v' prefix if present)
         TAG_VERSION=${GITHUB_REF#refs/tags/}
         TAG_VERSION=${TAG_VERSION#v}
         
-        echo "Package version: $PACKAGE_VERSION"
+        echo "Package version (__init__.py): $PACKAGE_VERSION"
+        echo "pyproject.toml version: $PYPROJECT_VERSION"
         echo "Tag version: $TAG_VERSION"
         
+        # Check all versions match
         if [ "$PACKAGE_VERSION" != "$TAG_VERSION" ]; then
           echo "Error: Version mismatch!"
           echo "Package version ($PACKAGE_VERSION) does not match tag ($TAG_VERSION)"
           exit 1
         fi
         
-        echo "Version check passed!"
+        if [ "$PYPROJECT_VERSION" != "$TAG_VERSION" ]; then
+          echo "Error: Version mismatch!"
+          echo "pyproject.toml version ($PYPROJECT_VERSION) does not match tag ($TAG_VERSION)"
+          exit 1
+        fi
+        
+        echo "All version checks passed!"
     
     - name: Install build dependencies
       run: |
